todos os tipos e cards esterializados

--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>calendario copa</title>
 </head>
 <body>
+    <header>
+        <img src="./assets/logo.svg" alt="logo">
+    </header>
     <main>
+        <secton class="card">
+            <h2>23/11 <span>quarta</span></h2>
+            <ul>
+                <li>
+                    <img src="assets/mar.svg" alt="bb">
+                    <strong>07:00</strong>
+                    <img src="./assets/cro.svg" alt="croacia">
+                </li>
+                <li>
+                    <img src="./assets/ale.svg" alt="bsuiça">
+                    <strong>16:00</strong>
+                    <img src="./assets/jpn.svg" alt="bcamar">
+                </li>
+                <li>
+                    <img src="./assets/esp.svg" alt="bb">
+                    <strong>16:00</strong>
+                    <img src="./assets/cost.svg" alt="bs">
+                </li>
+                <li>
+                    <img src="./assets/can.svg" alt="canada">
+                    <strong>16:00</strong>
+                    <img src="./assets/bel.svg" alt="bs">
+                </li>
+                
+            </ul>
+        </secton>
         <secton class="card">
             <h2>24/11 <span>quinta</span></h2>
             <ul>
@@ -17,8 +46,25 @@
                     <strong>16:00</strong>
                     <img src="./assets/servia.svg" alt="bs">
                 </li>
+                <li>
+                    <img src="./assets/suiça.svg" alt="bsuiça">
+                    <strong>07:00</strong>
+                    <img src="./assets/cama.svg" alt="bcamar">
+                </li>
+                <li>
+                    <img src="./assets/por.svg" alt="bb">
+                    <strong>10:00</strong>
+                    <img src="./assets/gana.svg" alt="bs">
+                </li>
+                <li>
+                    <img src="./assets/uru.svg" alt="bb">
+                    <strong>13:00</strong>
+                    <img src="./assets/koreia.svg" alt="bs">
+                </li>
+                
             </ul>
         </secton>
+
     </main>
 </body>
 </html>
